# coursach

./: new_file.py  pyproject.toml
coursach/: __init__.py  configs.py  file_divider.py  files_concatenator.py  files_sorter.py  finder.py  sorter.py
data/temp/: 7.csv
