[tool.poetry]
name = "coursach"
version = "0.1.0"
description = ""
authors = ["olegmaslov <oleg.gnome@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
get = 'coursach:global_sorter'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
